--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FinSight AI</title>
+  <title>FinSight AI - Daily Market Briefing</title>
   <link rel="stylesheet" href="/styles.css" />
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 2rem; }
-    button { padding: 0.5rem 1rem; border: 1px solid #ccc; border-radius: 6px; cursor: pointer; }
-    pre { background: #f8f9fa; padding: 1rem; border-radius: 6px; overflow: auto; }
+    * { box-sizing: border-box; }
+    body { 
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; 
+      margin: 0;
+      padding: 2rem;
+      background: #f5f5f5;
+      color: #333;
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h1 { 
+      margin-top: 0;
+      color: #2563eb;
+    }
+    button { 
+      padding: 0.75rem 1.5rem; 
+      border: none;
+      border-radius: 6px; 
+      cursor: pointer;
+      background: #2563eb;
+      color: white;
+      font-size: 1rem;
+      font-weight: 600;
+      margin-bottom: 2rem;
+      transition: background 0.2s;
+    }
+    button:hover { background: #1d4ed8; }
+    button:disabled { 
+      background: #9ca3af; 
+      cursor: not-allowed; 
+    }
+    .loading { 
+      text-align: center; 
+      padding: 2rem;
+      color: #6b7280;
+    }
+    .error {
+      background: #fee2e2;
+      color: #991b1b;
+      padding: 1rem;
+      border-radius: 6px;
+      margin: 1rem 0;
+    }
+    .briefing {
+      margin-top: 2rem;
+    }
+    .date {
+      color: #6b7280;
+      font-size: 0.9rem;
+      margin-bottom: 1.5rem;
+    }
+    .markets {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+    .market-card {
+      background: #f9fafb;
+      padding: 1.5rem;
+      border-radius: 8px;
+      border-left: 4px solid #2563eb;
+    }
+    .market-card h3 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1rem;
+      color: #374151;
+    }
+    .price {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: #111827;
+      margin: 0.5rem 0;
+    }
+    .change {
+      font-size: 0.9rem;
+      font-weight: 600;
+    }
+    .change.positive { color: #059669; }
+    .change.negative { color: #dc2626; }
+    .summary {
+      background: #eff6ff;
+      padding: 1.5rem;
+      border-radius: 8px;
+      border-left: 4px solid #3b82f6;
+      line-height: 1.6;
+      color: #1e40af;
+    }
+    .summary h2 {
+      margin-top: 0;
+      color: #1e40af;
+      font-size: 1.2rem;
+    }
   </style>
-  </head>
+</head>
 <body>
-  <h1>FinSight AI</h1>
-  <p>Click to call the backend Function:</p>
-  <button id="call-btn">Call helloWorld</button>
-  <h3>Response</h3>
-  <pre id="out">(waiting)</pre>
+  <div class="container">
+    <h1>📊 FinSight AI</h1>
+    <p>Your daily AI-powered market briefing for young investors</p>
+    
+    <button id="fetch-btn">Get Today's Briefing</button>
+    
+    <div id="output">
+      <div class="loading">Click the button above to load today's market briefing...</div>
+    </div>
+  </div>
+  
   <script src="/app.js"></script>
 </body>
 </html>
