--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FinSight AI - Daily Market Briefing & Portfolio</title>
   <link rel="stylesheet" href="/styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
     * { box-sizing: border-box; }
     body { 
@@ -270,6 +271,14 @@
               </tr>
             </tbody>
           </table>
+        </div>
+      </div>
+
+      <!-- Portfolio Performance Chart -->
+      <div id="portfolio-chart-section" class="chart-section" style="margin-bottom: 2rem;">
+        <h3>Portfolio Performance</h3>
+        <div style="background: white; padding: 1.5rem; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); height: 400px; position: relative;">
+          <canvas id="portfolio-chart"></canvas>
         </div>
       </div>
 
